--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
